[package]
name = "exonum-crypto"
version = "0.12.0"
edition = "2018"
authors = ["The Exonum Team <exonum@bitfury.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-crypto"
license = "Apache-2.0"
keywords = ["exonum", "cryptography", "library"]
categories = ["cryptography", "hashing"]
description = "Cryptography related types, constants, traits and functions."

[dependencies]
byteorder = { version = "1.2.7", features = [ "i128" ] }
chrono = "0.4.6"
hex = "0.4"
hex-buffer-serde = "0.2.0"
rand = "0.7"
rust_decimal = "1.0"
serde = "1.0.10"
serde_derive = "1.0.64"
serde_json = "1.0.19"
failure = "0.1.5"
toml = "0.5.0"
uuid = "0.7.1"
exonum_sodiumoxide = { version = "0.0.23", optional = true}
exonum-proto = { path = "../proto", version = "0.12.0", optional = true}
protobuf = "2.8.1"
bit-vec = "0.6.1"

[dev-dependencies]
tempdir = "0.3.7"

[features]
default = ["sodiumoxide-crypto", "protobuf_serialization"]
sodiumoxide-crypto = ["exonum_sodiumoxide"]
protobuf_serialization = ["exonum-proto"]

[build-dependencies]
exonum-build = { version = "0.12.0", path = "../build" }
