[package]
name = "exonum-proto"
version = "0.12.0"
edition = "2018"
authors = ["The Exonum Team <exonum@bitfury.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-derive"
license = "Apache-2.0"
keywords = ["protobuf", "exonum"]
categories = ["development-tools"]
description = "Helper macros for serialization structs in protobuf."

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
failure = "0.1.5"
protobuf = "2.8.1"
bit-vec = "0.6.1"

[build-dependencies]
exonum-build = { version = "0.12.0", path = "../build" }

